--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,9 @@ nav{
 /*Cards*/
 .card-img-top{
     height: 150px;
-    
     align-items: center;
+}
+.bg{
+    background-color:#20496e;
+    color: white;
 }
